@@ -1,3 +1,9 @@
+Thu Mar  4 14:13:36 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
+
+          Proper ORB destruction in case of error.
+
 Thu Mar  4 13:57:48 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/Plan_Launcher/EM_Launcher.h:
